--- a/iOS/Main.storyboard
+++ b/iOS/Main.storyboard
@@ -229,7 +229,7 @@
                     <navigationItem key="navigationItem" title="Title" id="2024">
                         <barButtonItem key="rightBarButtonItem" id="2309" systemItem="add">
                             <connections>
-                                <segue id="2363" destination="2313" kind="show"/>
+                                <segue id="2363" destination="2313" kind="show" identifier="addNewPlaceSegueIdentifier"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -250,25 +250,41 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Text" borderStyle="roundedRect" minimumFontSize="17" id="2374" translatesAutoresizingMaskIntoConstraints="NO">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="2374" translatesAutoresizingMaskIntoConstraints="NO" placeholder="what are you looking for?">
                                 <rect key="frame" x="20" y="108" width="374" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <pickerView contentMode="scaleToFill" id="2375" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
-                                <rect key="frame" x="20" y="210" width="374" height="162"/>
+                                <rect key="frame" x="20" y="163" width="374" height="162"/>
                             </pickerView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="2376" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
-                                <rect key="frame" x="20" y="429" width="374" height="287"/>
+                                <rect key="frame" x="20" y="391" width="374" height="325"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="2377">
-                                        <rect key="frame" x="0.0" y="28" width="374" height="45"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="2377" style="IBUITableViewCellStyleSubtitle" textLabel="3896" detailTextLabel="3897" reuseIdentifier="venueCellIdentifier">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="56"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2377" id="2378">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="44.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="55.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3896">
+                                                    <rect key="frame" x="15" y="10" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3897">
+                                                    <rect key="frame" x="15" y="31.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -278,13 +294,13 @@
                             <constraint id="2379" firstItem="2374" firstAttribute="top" secondItem="2310" secondAttribute="bottom" constant="44"/>
                             <constraint id="2380" firstItem="2374" firstAttribute="leading" secondItem="2314" secondAttribute="leadingMargin"/>
                             <constraint id="2381" firstItem="2374" firstAttribute="trailing" secondItem="2314" secondAttribute="trailingMargin"/>
-                            <constraint id="2382" firstItem="2375" firstAttribute="top" secondItem="2374" secondAttribute="bottom" constant="72"/>
                             <constraint id="2383" firstItem="2375" firstAttribute="leading" secondItem="2314" secondAttribute="leadingMargin"/>
                             <constraint id="2384" firstItem="2375" firstAttribute="trailing" secondItem="2314" secondAttribute="trailingMargin"/>
-                            <constraint id="2385" firstItem="2376" firstAttribute="top" secondItem="2375" secondAttribute="bottom" constant="57"/>
                             <constraint id="2386" firstItem="2376" firstAttribute="leading" secondItem="2314" secondAttribute="leadingMargin"/>
                             <constraint id="2387" firstItem="2376" firstAttribute="trailing" secondItem="2314" secondAttribute="trailingMargin"/>
                             <constraint id="2388" firstItem="2311" firstAttribute="top" secondItem="2376" secondAttribute="bottom"/>
+                            <constraint id="4932" firstItem="2376" firstAttribute="top" secondItem="2375" secondAttribute="bottom" constant="19"/>
+                            <constraint id="5493" firstItem="2375" firstAttribute="top" secondItem="2374" secondAttribute="bottom" constant="25"/>
                         </constraints>
                     </view>
                     <navigationItem title="New Destination" id="2371" key="navigationItem">
