--- a/iOS/Main.storyboard
+++ b/iOS/Main.storyboard
@@ -219,6 +219,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue id="5871" destination="5783" kind="show" identifier="mapSegueIdentifier"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -227,9 +230,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Title" id="2024">
-                        <barButtonItem key="rightBarButtonItem" id="2309" systemItem="add">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="2309">
                             <connections>
-                                <segue id="2363" destination="2313" kind="show" identifier="addNewPlaceSegueIdentifier"/>
+                                <segue destination="2313" kind="show" identifier="addNewPlaceSegueIdentifier" id="2363"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -238,9 +241,10 @@
             </objects>
             <point key="canvasLocation" x="1142" y="791"/>
         </scene>
+        <!--New Destination-->
         <scene sceneID="2312">
             <objects>
-                <viewController id="2313" sceneMemberID="viewController" customClass="addNewPlaceViewController">
+                <viewController id="2313" customClass="addNewPlaceViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="2310"/>
                         <viewControllerLayoutGuide type="bottom" id="2311"/>
@@ -248,22 +252,21 @@
                     <view key="view" contentMode="scaleToFill" id="2314">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="2374" translatesAutoresizingMaskIntoConstraints="NO" placeholder="what are you looking for?">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="what are you looking for?" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2374">
                                 <rect key="frame" x="20" y="108" width="374" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <pickerView contentMode="scaleToFill" id="2375" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
+                            <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2375">
                                 <rect key="frame" x="20" y="163" width="374" height="162"/>
                             </pickerView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="2376" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2376">
                                 <rect key="frame" x="20" y="391" width="374" height="325"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="2377" style="IBUITableViewCellStyleSubtitle" textLabel="3896" detailTextLabel="3897" reuseIdentifier="venueCellIdentifier">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="venueCellIdentifier" textLabel="3896" detailTextLabel="3897" style="IBUITableViewCellStyleSubtitle" id="2377">
                                         <rect key="frame" x="0.0" y="28" width="374" height="56"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2377" id="2378">
@@ -290,36 +293,63 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint id="2379" firstItem="2374" firstAttribute="top" secondItem="2310" secondAttribute="bottom" constant="44"/>
-                            <constraint id="2380" firstItem="2374" firstAttribute="leading" secondItem="2314" secondAttribute="leadingMargin"/>
-                            <constraint id="2381" firstItem="2374" firstAttribute="trailing" secondItem="2314" secondAttribute="trailingMargin"/>
-                            <constraint id="2383" firstItem="2375" firstAttribute="leading" secondItem="2314" secondAttribute="leadingMargin"/>
-                            <constraint id="2384" firstItem="2375" firstAttribute="trailing" secondItem="2314" secondAttribute="trailingMargin"/>
-                            <constraint id="2386" firstItem="2376" firstAttribute="leading" secondItem="2314" secondAttribute="leadingMargin"/>
-                            <constraint id="2387" firstItem="2376" firstAttribute="trailing" secondItem="2314" secondAttribute="trailingMargin"/>
-                            <constraint id="2388" firstItem="2311" firstAttribute="top" secondItem="2376" secondAttribute="bottom"/>
-                            <constraint id="4932" firstItem="2376" firstAttribute="top" secondItem="2375" secondAttribute="bottom" constant="19"/>
-                            <constraint id="5493" firstItem="2375" firstAttribute="top" secondItem="2374" secondAttribute="bottom" constant="25"/>
+                            <constraint firstItem="2374" firstAttribute="top" secondItem="2310" secondAttribute="bottom" constant="44" id="2379"/>
+                            <constraint firstItem="2374" firstAttribute="leading" secondItem="2314" secondAttribute="leadingMargin" id="2380"/>
+                            <constraint firstItem="2374" firstAttribute="trailing" secondItem="2314" secondAttribute="trailingMargin" id="2381"/>
+                            <constraint firstItem="2375" firstAttribute="leading" secondItem="2314" secondAttribute="leadingMargin" id="2383"/>
+                            <constraint firstItem="2375" firstAttribute="trailing" secondItem="2314" secondAttribute="trailingMargin" id="2384"/>
+                            <constraint firstItem="2376" firstAttribute="leading" secondItem="2314" secondAttribute="leadingMargin" id="2386"/>
+                            <constraint firstItem="2376" firstAttribute="trailing" secondItem="2314" secondAttribute="trailingMargin" id="2387"/>
+                            <constraint firstItem="2311" firstAttribute="top" secondItem="2376" secondAttribute="bottom" id="2388"/>
+                            <constraint firstItem="2376" firstAttribute="top" secondItem="2375" secondAttribute="bottom" constant="19" id="4932"/>
+                            <constraint firstItem="2375" firstAttribute="top" secondItem="2374" secondAttribute="bottom" constant="25" id="5493"/>
                         </constraints>
                     </view>
-                    <navigationItem title="New Destination" id="2371" key="navigationItem">
-                        <barButtonItem key="rightBarButtonItem" id="2372" systemItem="save">
+                    <navigationItem key="navigationItem" title="New Destination" id="2371">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="2372">
                             <connections>
                                 <action selector="SaveNew_Activated:" destination="2313" id="2373"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="saveNewBarButton" destination="2372" id="name-outlet-2372"/>
-                        <outlet property="filterTextField" destination="2374" id="name-outlet-2374"/>
                         <outlet property="categoriesPickerView" destination="2375" id="name-outlet-2375"/>
+                        <outlet property="filterTextField" destination="2374" id="name-outlet-2374"/>
                         <outlet property="placesTableView" destination="2376" id="name-outlet-2376"/>
+                        <outlet property="saveNewBarButton" destination="2372" id="name-outlet-2372"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2315" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1658" y="793"/>
+            <point key="canvasLocation" x="1721" y="-28"/>
+        </scene>
+        <scene sceneID="5782">
+            <objects>
+                <viewController id="5783" sceneMemberID="viewController" customClass="PlaceMapViewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5780"/>
+                        <viewControllerLayoutGuide type="bottom" id="5781"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5784">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="7008" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                                <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
+                    </view>
+                    <connections>
+                        <outlet property="venueMapView" destination="7008" id="name-outlet-7008"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5785" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1744" y="772"/>
         </scene>
     </scenes>
 </document>
