--- a/Droid/Resources/layout/NewTrip.axml
+++ b/Droid/Resources/layout/NewTrip.axml
@@ -22,7 +22,7 @@
             android:minWidth="25px"
             android:minHeight="25px" />
         <Button
-            android:text="Button"
+            android:text="Add trip"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/saveButton" />
